apps/atlantis/manifests/StatefulSet-atlantis.yml
---
# Source: atlantis/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-6.11.0
    release: atlantis
    heritage: Helm
spec:
  serviceName: atlantis
  replicas: 1
  selector:
    matchLabels:
      app: atlantis
      release: atlantis
  template:
    metadata:
      labels:
        app: atlantis
        release: atlantis
      annotations:
        checksum/config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/repo-config: 0bde94a4f3c2b27cd978675afa0e5401d4a986f7f8af55a0f424caaf438a73f4
    spec:
      hostNetwork: false
      serviceAccountName: atlantis
      shareProcessNamespace: false
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsUser: 200
      priorityClassName: cluster-infrastructure
      volumes:
        - name: atlantis-data
          persistentVolumeClaim:
            claimName: atlantis-data
        - name: repo-config
          configMap:
            name: atlantis-repo-config
        - name: kubeconfigs
          secret:
            defaultMode: 420
            secretName: kubeconfigs
      containers:
        - name: atlantis
          image: "dfdsdk/atlantis-prime-pipeline:2.1.3"
          imagePullPolicy: IfNotPresent
          args:
            - server
            - --parallel-pool-size=15
            - --default-tf-distribution=opentofu
          ports:
            - name: atlantis
              containerPort: 4141
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4141
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: atlantis-data
              mountPath: /atlantis-data
            - name: repo-config
              mountPath: /etc/atlantis/repos.yaml
              subPath: repos.yaml
              readOnly: true
            - mountPath: /kubeconfigs
              name: kubeconfigs
              readOnly: true
          resources:
            limits:
              memory: ${flux_atlantis_resource_memory}
            requests:
              cpu: ${flux_atlantis_resource_cpu}
              memory: ${flux_atlantis_resource_memory}
