apps/atlantis/manifests/Service-atlantis.yml
---
# Source: atlantis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-6.11.0
    release: atlantis
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4141
      protocol: TCP
      name: atlantis
  selector:
    app: atlantis
    release: atlantis
