apps/atlantis/manifests/Ingress-atlantis.yml
---
# Source: atlantis/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app: atlantis
    chart: atlantis-6.11.0
    release: atlantis
    heritage: Helm
spec:
  ingressClassName: traefik
  rules:
    - host: "atlantis.${flux_eks_fqdn}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: atlantis
                port:
                  number: 80
